tests/derive/snapshots/tests__derive__cause__sourced_error_with_cause.snap
---
source: tests/derive/cause.rs
expression: "render(Parent { children: vec![Child {}.into()], source, span: 13..17 })"
---
× error: parent error
      × error: child error

   ╭─[some_file.lm:1:14]
 1 │ fn main() -> void {
   │              ^^^^ type not allowed
 2 │     return 0;
   ╰──
